# Vocal2Midi-for-linux

./: .gitignore  .markdownlint-cli2.jsonc  ACKNOWLEDGEMENTS.md  CONTRIBUTING.md  README.ja.md  README.md  README.zh-CN.md  SECURITY.md  Vocal2Midi Web.html  Vocal2Midi.spec  download_models.py  environment.yml  install.bat  install.sh  pyproject.toml  requirements-linux.txt  requirements-web.txt  requirements.txt  run.bat  run.sh  web_model_download_manager.py  web_server.py  web_stream_redirector.py  web_task_manager.py
application/: __init__.py  config.py  exceptions.py  pipeline.py
aur/vocal2midi-bin/: .SRCINFO  PKGBUILD  vocal2midi.desktop
docs/: architecture.md  contributing.md  documentation.md  linux.md  qwen-linux.md  web-api.md
experiments/: visualize_slicer.py
experiments/1218_hfa_model_new_dict/: config.json  ds-zh-pinyin-lite.txt  ds_cmudict-07b.txt  japanese_dict_full.txt  vocab.json
experiments/GAME-1.0.3-medium-onnx/: config.json
experiments/Qwen3-ASR-1.7B/: .msc
experiments/romajiASR/: README.md  phoneme_vocab.json
experiments/romajiASR_test/: README.md  model.meta.json
gui/: __init__.py  auto_lyric_view.py  fluent_main.py  fluent_utils.py  fluent_worker.py  global_settings_view.py  settings_utils.py
inference/: device_utils.py
inference/API/: asr_api.py  hfa_api.py  lfa_api.py  rmvpe_api.py  slicer_api.py  ustx_api.py
inference/HubertFA/: __init__.py  onnx_infer.py
inference/game/: alignment_utils.py
inference/io/: note_io.py
inference/pipeline/: auto_lyric_hybrid.py
inference/quant/: quantization.py  rust_bridge.py
inference/romaji_asr/: common.py
inference/slicer/: slicer2.py
rewrite-in-rust/: README.md  manifest.yaml  notes.md  resources.md
rewrite-in-rust/rust/crates/v2m-core/: Cargo.toml
rewrite-in-rust/rust/crates/v2m-core/src/: application.rs  asr_chinese_itn.rs  asr_qwen_language_schema.rs  asr_qwen_wav_pcm_decode.rs  asr_resample_poly.rs  asr_romaji_batch_metadata.rs  asr_romaji_vocab_ctc_decode.rs  batch_cli_planning.rs  batch_cli_reslice_json.rs  device.rs  download_models_archive.rs  download_models_catalog.rs  download_models_cli.rs  download_models_effectful.rs  export.rs  hfa_config.rs  hfa_export_dispatch.rs  hfa_g2p.rs  hfa_htk_export.rs  hfa_metrics.rs  hfa_pyyaml.rs  hfa_textgrid_export.rs  hfa_word.rs  ja_g2p.rs  lib.rs  lyric_language.rs  lyric_matching_file.rs  lyric_sequence.rs  midi_export.rs  python_15_nonprintable.rs  quant.rs  slice_bounds.rs  slice_method.rs  slicer_default.rs  slicer_grid.rs  slicer_heuristic.rs  slicer_pitch.rs  slicer_segment.rs  slicer_window.rs  ustx_pitch_curve.rs  (+14 more)
rewrite-in-rust/rust/crates/v2m-core/src/game/: mod.rs  note_word.rs  phone_word.rs
rewrite-in-rust/rust/crates/v2m-quant-bridge/: Cargo.toml
rewrite-in-rust/rust/crates/v2m-quant-bridge/src/: main.rs
scripts/: audit_vendored_sources.py  check_markdown_links.py  download_models.py  slice_asr_cli.py  vendor_native_sources.py  vendor_sources.py
settings/: vocal2midi.ini
tests/: test_api_integration.py  test_quantization_caller_defaults_contract.py  test_quantization_pipeline_promotion.py  test_web_api.py
(+723 files in other folders)
