[project]
name = "vocal2midi"
version = "0.1.0"
description = "Linux uv environment for Vocal2Midi"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "click",
    "flask>=3.0.0,<4.0.0",
    "flask-cors>=4.0.0,<5.0.0",
    "flask-socketio>=5.3.0,<6.0.0",
    "gunicorn>=21.2.0,<22.0.0",
    "librosa",
    "matplotlib",
    "mido",
    "mistral-common",
    "numpy<2.0.0",
    "onnxruntime; platform_system != 'Windows'",
    "onnxruntime-directml; platform_system == 'Windows'",
    "pydub",
    "pyopenjtalk; platform_system == 'Windows'",
    "pyqt-fluent-widgets",
    "pyqt5",
    "pytest>=7.4.0,<8.0.0",
    "pytest-flask>=1.3.0,<2.0.0",
    "python-socketio>=5.11.0,<6.0.0",
    "pyyaml",
    "qwen-asr; platform_system != 'Windows'",
    "requests",
    "scipy>=1.10.0",
    "sentencepiece",
    "soundfile",
    "textgrid",
    "torch; platform_system != 'Windows'",
    "tqdm",
    "transformers",
    "eventlet>=0.35.0,<1.0.0",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
