[package]
name = "v2m-quant-bridge"
description = "Internal JSON bridge for opt-in Vocal2Midi Rust quantization"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "v2m-quant-bridge"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
v2m-core = { path = "../v2m-core" }
